--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -434,11 +434,12 @@ body.memBody #Footer {
     font-size: 20px;
     font-weight: bold;
     margin-top:20px;
+    line-height: 1.5;
 }
 .introBox .siteTit span {
     color:#fff;
-    padding-bottom:2px;
     border-bottom:2px solid #fff;
+    margin-bottom:3px;
 }
 .introBox .siteTit span:last-child {
     color:#000;
