--- a/public/css/willbes/style_cop.css
+++ b/public/css/willbes/style_cop.css
@@ -1218,3 +1218,15 @@
         .offAirBar span.offAirBarBtn {position: absolute; top:0; right: 0; z-index: 2; float:right; display:block; color:#fff; line-height:60px; margin-right:20px}
         .offAirBar ul {position:absolute; top:0; z-index:2; overflow:hidden; height:60px; margin: 0; padding-left: 350px; width: 920px;}
         .offAirBar li {font-family: "NotoSansCJKkr-Regular", "Noto Sans KR", "sans-serif"; line-height:60px; font-size: 13px; color:#333}
+
+        /*메인 모달팝업*/
+        .layer {display:block; position:fixed; _position:absolute; top:0; left:0; width:100%; height:100%; z-index:99999}
+        .layer .bg {position:absolute; top:0; left:0; width:100%; height:100%; background:#000; opacity:.7; filter:alpha(opacity=70)}
+        .layer .pop-layer {display:block; }
+
+        .pop-layer {display:block; position: absolute; top:50%; left:50%; width:760px; height:auto; /*background-color:#fff; */z-index:10} 
+        .pop-layer .pop-container {}
+        .pop-layer .btn-r {margin:10px 0; text-align:right}
+
+        .pop-layer .btn-r a.cbtn {display:inline-block; height:25px; line-height:25px; padding:0 14px 0; border:1px solid #bbb; background-color:#16120f; font-size:13px; color:#bbb; margin-left:10px} 
+        .pop-layer .btn-r a.cbtn:hover {border:1px solid #091940; background-color:#1f326a; color:#fff;}
