--- a/public/css/willbes/style_cop.css
+++ b/public/css/willbes/style_cop.css
@@ -1220,12 +1220,11 @@
         .offAirBar li {font-family: "NotoSansCJKkr-Regular", "Noto Sans KR", "sans-serif"; line-height:60px; font-size: 13px; color:#333}
 
     /*메인 모달팝업*/
-    .layer {display:block; position:fixed; _position:absolute; top:0; left:0; width:100%; height:100%; z-index:9999}
-    .layer .bg {position:absolute; top:0; left:0; width:100%; height:100%; background:#000; opacity:.7; filter:alpha(opacity=70)}
-    .layer .pop-layer {display:block;}
+    .modalPopup {display:block; position:fixed; _position:absolute; top:0; left:0; width:100%; height:100%; z-index:9999}
+    .modalPopup .bg {position:absolute; top:0; left:0; width:100%; height:100%; background:#000; opacity:.7; filter:alpha(opacity=70)}
+    .modalPopup .pop-layer {display:block;}
 
     .pop-layer {display:block; position: absolute; top:50%; left:50%; margin-left:-380px; margin-top:-380px; width:760px; height:auto; z-index:10} 
-    .pop-layer .pop-container {}
     .pop-layer .btn-r {margin:10px 0; text-align:right}
     .pop-layer .btn-r a.cbtn {display:inline-block; height:25px; line-height:25px; padding:0 14px 0; border:1px solid #bbb; background-color:#16120f; font-size:13px; color:#bbb; margin-left:10px} 
     .pop-layer .btn-r a.cbtn:hover {border:1px solid #091940; background-color:#1f326a; color:#fff;}
