--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -317,14 +317,16 @@ span {
 
 /* MainTxtBnr */
 .MainTxtBnr {
-    background: #1a8ccc;
+    background: #0c5dc0;
     height: 36px;
     font-size: 12px;
     color: #fff;
     text-align: center;
     line-height: 34px;
 }
-
+.MainTxtBnr strong {
+    font-size: 14px;
+}
 
 /* Login Form */
 
