--- a/public/css/willbes/style_gosi_acad.css
+++ b/public/css/willbes/style_gosi_acad.css
@@ -241,51 +241,51 @@
     letter-spacing: 0;
     border: none;
 }
-.acad_infoBox li a.on,
-.acad_infoBox li a:hover {
-    color: #0c5dc0;
+.GA  .acad_infoBox li a.on,
+.GA .acad_infoBox li a:hover {
+    color: #b7550e;
 }
-.acad_infoBox li a span {
+.GA .acad_infoBox li a span {
     display: block;
     text-align: left;
     padding-top: 15px;
     padding-left: 100px;
 }
-.acad_infoBox li.w-infoBox1 a {
-    background: url("../../img/willbes/cop_acad/icon_info1.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox1 a {
+    background: url("../../img/willbes/gosi_acad/icon_info1.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox2 a {
-    background: url("../../img/willbes/cop_acad/icon_info2.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox2 a {
+    background: url("../../img/willbes/gosi_acad/icon_info2.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox3 a {
-    background: url("../../img/willbes/cop_acad/icon_info3.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox3 a {
+    background: url("../../img/willbes/gosi_acad/icon_info3.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox4 a {
-    background: url("../../img/willbes/cop_acad/icon_info4.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox4 a {
+    background: url("../../img/willbes/gosi_acad/icon_info4.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox5 a {
-    background: url("../../img/willbes/cop_acad/icon_info5.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox5 a {
+    background: url("../../img/willbes/gosi_acad/icon_info5.png") no-repeat 30px center;
 }
 
-.acad_infoBox li.w-infoBox1 a.on,
-.acad_infoBox li.w-infoBox1 a:hover {
-    background: url("../../img/willbes/cop_acad/icon_info1_on.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox1 a.on,
+.GA .acad_infoBox li.w-infoBox1 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info1_on.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox2 a.on,
-.acad_infoBox li.w-infoBox2 a:hover {
-    background: url("../../img/willbes/cop_acad/icon_info2_on.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox2 a.on,
+.GA .acad_infoBox li.w-infoBox2 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info2_on.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox3 a.on,
-.acad_infoBox li.w-infoBox3 a:hover {
-    background: url("../../img/willbes/cop_acad/icon_info3_on.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox3 a.on,
+.GA .acad_infoBox li.w-infoBox3 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info3_on.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox4 a.on,
-.acad_infoBox li.w-infoBox4 a:hover {
-    background: url("../../img/willbes/cop_acad/icon_info4_on.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox4 a.on,
+.GA .acad_infoBox li.w-infoBox4 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info4_on.png") no-repeat 30px center;
 }
-.acad_infoBox li.w-infoBox5 a.on,
-.acad_infoBox li.w-infoBox5 a:hover {
-    background: url("../../img/willbes/cop_acad/icon_info5_on.png") no-repeat 30px center;
+.GA .acad_infoBox li.w-infoBox5 a.on,
+.GA .acad_infoBox li.w-infoBox5 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info5_on.png") no-repeat 30px center;
 }
 
 /* Main Container : nSlider : gosi Acad */
